test/examples/analyzer/invalid/002_undeclared_method.spell
# Undefined method "run"

main () = run